<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pc.zadanie1.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:id="@+id/mainVerticalLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/flightLayout">

            <ImageView

                app:srcCompat="@drawable/ikonka1"
                android:contentDescription="@null"
                android:id="@+id/flightImage"
                android:layout_width="41dp"
                android:layout_height="55dp" />

            <EditText

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/miejsce_wylotu"
                android:ems="10"
                android:id="@+id/flightTextField"
                android:layout_weight="1"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"

                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/arrivalLayout">

            <ImageView
                android:layout_width="41dp"
                android:contentDescription="@null"
                android:layout_height="55dp"
                app:srcCompat="@drawable/przechwytywanie222"
                android:id="@+id/arrivalImage"
                android:layout_weight="0.10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/miejsce_przylotu"
                android:ems="10"
                android:id="@+id/arrivalTextField"
                android:layout_weight="1.26"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:paddingTop="5dp"
            android:id="@+id/checkboxLayout">

            <TextView
                android:text="@string/lot_w_obie_strony"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/flightOptionTextView"
                android:layout_weight="1"
                android:focusableInTouchMode="false"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic"
                android:paddingTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/optionCheckBox" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:weightSum="1"
            android:id="@+id/flightDateLayout">

            <TextView
                android:text="@string/data_wylotu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/flightDateTextView"
                android:textStyle="normal|bold"
                android:textSize="22sp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:layout_weight="0.94" />

            <EditText
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/flightDateTextField" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:id="@+id/arrivalDateLayout">

            <TextView
                android:text="@string/data_przylotu"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:id="@+id/arrivalDateTextView"
                android:textStyle="normal|bold"
                android:textSize="22sp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:paddingLeft="5dp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/arrivalDateTextField"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/adultTicketLayout">

            <TextView
                android:text="@string/doro_li"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adultsTextView"
                android:textSize="22sp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="0.82" />

            <Button
                android:text="@string/butt1"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:id="@+id/decreaseAdultsButton" />

            <EditText
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/adultsQuantityTextField"
                android:layout_weight="0.19"
                android:text="@string/_0"
                android:textAlignment="center" />

            <Button
                android:text="@string/_"
                android:layout_height="wrap_content"
                android:id="@+id/increaseAdultsButton"
                android:layout_width="63dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/kidsTicketLayout"
            android:layout_weight="0.17">

            <TextView
                android:text="@string/dzieci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/kidsTextView"
                android:textSize="22sp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="0.17" />

            <Button
                android:text="@string/resminus"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:id="@+id/decreaseKidsButton" />

            <EditText
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/kidsQuantityTextField"
                android:text="@string/_01"
                android:textAlignment="center"
                android:layout_weight="0.04" />

            <Button
                android:text="@string/plus"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:id="@+id/increaseKidsButton" />

        </LinearLayout>

        <Button
            android:text="@string/szukaj_po_cze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchFlightsButton"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_weight="0.78"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>
